# uvengine

./: README.md  cs1_icecream.py  cs2_docker.py  derivation_engine.py  derivation_engine_simple.py  main_resolve_variability.py  product.txt  pyproject.toml  requirements.txt  setup.py
case_studies/docker/mapping_model/: docker.csv
case_studies/icecream/configurations/: cone.json  cup.json  stick.json
case_studies/icecream/mapping_model/: icecream.csv
case_studies/icecream/templates/: icecream_cone_template.txt.jinja
configurations/: compose_specification.uvl.json
evaluation/case_studies/docker/configurations/: docker.uvl.json
evaluation/case_studies/docker/fm_models/: compose_specification_full.uvl
evaluation/case_studies/docker/templates/: compose_specification_template.yaml.jinja
evaluation/case_studies/docker_compose_simple/fm_models/: compose_build_specification.uvl  (+2 more)
evaluation/case_studies/icecream/: icecream_fm.uvl  icecream_fm.uvl.json  icecream_mapping.csv  icecream_template.txt.jinja
examples/jmetal/fm_models/: jMetal copy.uvl
fm_models/: compose_build_specification.uvl  compose_specification.dot  compose_specification.uvl  compose_specification_full.uvl
spl_implementation/models/: __init__.py  configuration.py  exceptions.py  mapping_model.py  variation_point.py  vengine.py  vengine_old.py
templates/: compose_specification_template.yaml
templates/subtemplates/: services_port_specification.yaml.jinja
uvengine/: uvengine.py
uvengine_web/: index.html  main.js
uvengine_web/uvengine/: mapping_model.py  uvengine.py
(+12 files in other folders)
