[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uvengine"
version = "1.0.2"
description = "Variability resolution engine for UVL models and text-based implementation artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
  {name = "José Miguel Horcas", email = "horcas@uma.es"}
]
dependencies = [
  "flamapy~=2.5.0.dev0",
  "flamapy-fm~=2.5.0.dev0",
  "Jinja2~=3.1.6"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://uvengine.github.io/"
"GitHub" = "https://github.com/UVengine/uvengine"

[tool.setuptools]
packages = ["uvengine"]